feat: Add new html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Step into a culture where achieving more, being more, and securing a
           brighter future are part of our day-to-day.
         </h3>
-        <a href="#" class="cover__jobs">See all jobs</a>
+        <a href="#" class="cover__jobs jobs-check">See all jobs</a>
         photo
       </section>
       <section class="main__vacancies vacancies">
@@ -76,6 +76,79 @@
             <span>50 000 000€</span>
             <span>paid to partners in 2022</span>
           </div>
+        </div>
+      </section>
+      <section class="main__community community">
+        <div class="community__photo">
+          <img src="" alt="Phone with Alpha Affiliates logo" />
+        </div>
+        <div class="community__text">
+          <h2 class="community__heading">Global affiliate community</h2>
+          <span class="community__description"
+            >Since its launch in 2012, Alpha Affiliates has scaled at pace
+            and is now recognized as one of the leading brands within the global
+            iGaming community. It continues expanding into new markets
+            and regularly participates in the most prestigious affiliate events.
+            With over <b>12,000 partners</b> in <b>38 countries</b>, Alpha
+            Affiliates is on a mission to become a global force in iGaming
+            and direct advertising.</span
+          >
+        </div>
+      </section>
+      <section class="main__professionals professionals">
+        <div class="professionals__text">
+          <h2 class="professionals__heading">Team of professionals</h2>
+          <span class="professionals__description"
+            >Alpha Affiliates thrives on innovation, creativity, and teamwork.
+            We're all about pushing boundaries, embracing fresh ideas,
+            and conquering challenges. Our team gathers industry experts with
+            immense affiliate marketing and product development skills.
+            Through mentorship and various educational initiatives, we empower
+            our team to level up and take on ambitious goals.</span
+          >
+        </div>
+        <div class="professionals__photo">
+          <img src="" alt="Phone with Alpha Affiliates people" />
+        </div>
+      </section>
+      <h2 class="main__relocation-heading">RELOCATION</h2>
+      <section class="main__relocation relocation">
+        <div class="relocation__benefits benefits">
+          <h3 class="benefits__heading">
+            Landing in a new place is always exciting, and we will help you make
+            the first step confidently.
+          </h3>
+          <div class="benefits__block">
+            <ul class="benefits__list">
+              <li>Relocation for you, family and pets</li>
+              <li>Tickets, transfers and hotels</li>
+              <li>Visas and permits</li>
+              <li>Help with a settlement</li>
+              <li>Assistance in adaption</li>
+              <li>24/7 support</li>
+            </ul>
+            <img
+              src="./images/emojione-monotone_airplane.svg"
+              alt="Airplane flying to Cyprus"
+            />
+          </div>
+        </div>
+        <div class="relocation__landing landing">
+          <h3 class="landing__heading">
+            We will need a pack of documents to land you in Cyprus
+          </h3>
+          <ol class="landing__list">
+            <li>Certificate of goodconduct</li>
+            <li>Previous job recommendations</li>
+            <li>Your Passport, Driver's License or ID card</li>
+            <li>Your CV/Portfolio</li>
+            <li>Higher education diploma</li>
+            <li>Several simplemedical tests</li>
+          </ol>
+        </div>
+        <div class="relocation__offering">
+          <span>Are you with us?</span>
+          <a href="#" class="relocation__jobs jobs-check">See all jobs</a>
         </div>
       </section>
     </main>
