feat: Create HTML for the main page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo"></div>
+      <div class="header__logo">
+        <img src="./images/logo-big 1.svg" alt="Logo of Alpha Affiliates" />
+      </div>
       <ul class="header__menu"></ul>
       <div class="header__social">
         <div class="header__social-telegram"></div>
@@ -80,7 +82,10 @@
       </section>
       <section class="main__community community">
         <div class="community__photo">
-          <img src="" alt="Phone with Alpha Affiliates logo" />
+          <img
+            src="./images/phone.png"
+            alt="Phone with Alpha Affiliates logo"
+          />
         </div>
         <div class="community__text">
           <h2 class="community__heading">Global affiliate community</h2>
@@ -108,7 +113,10 @@
           >
         </div>
         <div class="professionals__photo">
-          <img src="" alt="Phone with Alpha Affiliates people" />
+          <img
+            src="./images/Team of professionals.png"
+            alt="Phone with Alpha Affiliates people"
+          />
         </div>
       </section>
       <h2 class="main__relocation-heading">RELOCATION</h2>
@@ -137,21 +145,110 @@
           <h3 class="landing__heading">
             We will need a pack of documents to land you in Cyprus
           </h3>
-          <ol class="landing__list">
-            <li>Certificate of goodconduct</li>
-            <li>Previous job recommendations</li>
-            <li>Your Passport, Driver's License or ID card</li>
-            <li>Your CV/Portfolio</li>
-            <li>Higher education diploma</li>
-            <li>Several simplemedical tests</li>
-          </ol>
+          <div class="landing__list">
+            <div class="landing__item">
+              <div class="landing__item-number">01</div>
+              <p class="landing__item-text">Previous job recommendations</p>
+            </div>
+            <div class="landing__item">
+              <div class="landing__item-number">02</div>
+              <p class="landing__item-text">Certificate of goodconduct</p>
+            </div>
+            <div class="landing__item">
+              <div class="landing__item-number">03</div>
+              <p class="landing__item-text">
+                Your Passport, Driver's License or ID card
+              </p>
+            </div>
+            <div class="landing__item">
+              <div class="landing__item-number">04</div>
+              <p class="landing__item-text">Your CV/Portfolio</p>
+            </div>
+            <div class="landing__item">
+              <div class="landing__item-number">05</div>
+              <p class="landing__item-text">Higher education diploma</p>
+            </div>
+            <div class="landing__item">
+              <div class="landing__item-number">06</div>
+              <p class="landing__item-text">Several simplemedical tests</p>
+            </div>
+          </div>
         </div>
         <div class="relocation__offering">
           <span>Are you with us?</span>
           <a href="#" class="relocation__jobs jobs-check">See all jobs</a>
         </div>
       </section>
+      <section class="main__form form">
+        <form action="#" class="form__form">
+          <div>
+            <div class="form__line"></div>
+            <input type="text" class="form__name" placeholder="Full name" />
+          </div>
+          <div>
+            <div class="form__line"></div>
+            <input
+              type="text"
+              class="form__email"
+              placeholder="Email Address"
+            />
+          </div>
+          <div>
+            <div class="form__line"></div>
+            <input type="text" class="form__message" placeholder="Message" />
+          </div>
+          <div>
+            <input type="submit" value="Send Message" />
+          </div>
+        </form>
+        <div class="form__emails">
+          <div class="email">
+            <div>
+              <h4>Support</h4>
+              <div>
+                <div class="form__redline"></div>
+                <a href="mailto:partners@alpha-affiliates.com"
+                  >partners@alpha-affiliates.com</a
+                >
+              </div>
+            </div>
+            <div>
+              <h4>Events</h4>
+              <div>
+                <div class="form__redline"></div>
+                <a href="mailto:event@alpha-affiliates.com"
+                  >event@alpha-affiliates.com</a
+                >
+              </div>
+            </div>
+            <div>
+              <h4>PR</h4>
+              <div>
+                <div class="form__redline"></div>
+                <a href="mailto:pr@alpha-affiliates.com"
+                  >pr@alpha-affiliates.com</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="form__socials">
+            <img src="./images/telegram.svg" alt="telegram icon" />
+            <img src="./images/instagram.svg" alt="instagram icon" />
+            <img src="./images/linkedin.svg" alt="linkedin icon" />
+          </div>
+        </div>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <img
+        src="./images/logo-big 1.svg"
+        alt="logo of Alpha Affiliates"
+        class="footer__logo"
+      />
+      <span class="footer__legal"
+        >Copyright © 2024 Alpha Affiliates. All rights reserved.</span
+      >
+      <a href="#" class="footer__terms">Terms and Conditions</a>
+    </footer>
   </body>
 </html>
