feat: Create header

--- a/index.html
+++ b/index.html
@@ -11,15 +11,44 @@
       <div class="header__logo">
         <img src="./images/logo-big 1.svg" alt="Logo of Alpha Affiliates" />
       </div>
-      <ul class="header__menu"></ul>
+      <ul class="header__menu menu">
+        <li class="menu__item">
+          <span>01.</span>
+          <a href="#cover">Careers</a>
+        </li>
+        <li class="menu__item">
+          <span>02.</span>
+          <a href="#leaders">About us</a>
+        </li>
+        <li class="menu__item">
+          <span>03.</span>
+          <a href="#relocation">Relocations</a>
+        </li>
+        <li class="menu__item">
+          <span>04.</span>
+          <a href="#form">Contact us</a>
+        </li>
+      </ul>
       <div class="header__social">
-        <div class="header__social-telegram"></div>
-        <div class="header__social-instagram"></div>
-        <div class="header__social-linkedin"></div>
+        <a
+          target="_blank"
+          href="https://t.me/A_Affiliates"
+          class="header__social-telegram header__social-item"
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.instagram.com/alphaaffiliates.career?igsh=dTJrdnpwMmFzdXVp"
+          class="header__social-instagram header__social-item"
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/company/alpha-affiliates/"
+          class="header__social-linkedin header__social-item"
+        ></a>
       </div>
     </header>
     <main class="main">
-      <section class="main__cover cover">
+      <section id="cover" class="main__cover cover">
         <h1 class="cover__heading">
           Your journey to the big one begins <span>here</span>
         </h1>
@@ -55,7 +84,7 @@
           </div>
         </div>
       </section>
-      <section class="main__leaders leaders">
+      <section id="leaders" class="main__leaders leaders">
         <h2 class="leaders__heading">Market leaders</h2>
         <span class="leaders__description"
           >We are an international digital marketing company and one of the
@@ -120,7 +149,7 @@
         </div>
       </section>
       <h2 class="main__relocation-heading">RELOCATION</h2>
-      <section class="main__relocation relocation">
+      <section id="relocation" class="main__relocation relocation">
         <div class="relocation__benefits benefits">
           <h3 class="benefits__heading">
             Landing in a new place is always exciting, and we will help you make
@@ -179,7 +208,7 @@
           <a href="#" class="relocation__jobs jobs-check">See all jobs</a>
         </div>
       </section>
-      <section class="main__form form">
+      <section id="form" class="main__form form">
         <form action="#" class="form__form">
           <div>
             <div class="form__line"></div>
