feat: Add promo-block

--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
     </header>
     <main class="main">
       <section id="cover" class="main__cover cover">
-        <h1 class="cover__heading">
-          Your journey to the big one begins <span>here</span>
-        </h1>
-        <h3 class="cover__subheading">
-          Step into a culture where achieving more, being more, and securing a
-          brighter future are part of our day-to-day.
-        </h3>
-        <a href="#" class="cover__jobs jobs-check">See all jobs</a>
-        photo
+        <div class="left-side">
+          <h1 class="cover__heading">
+            Your journey to the big one begins <span>here</span>
+          </h1>
+          <h3 class="cover__subheading">
+            Step into a culture where achieving more, being more, and securing a
+            brighter future are part of our day-to-day.
+          </h3>
+          <a href="#vacancies" class="cover__jobs jobs-check">See all jobs</a>
+        </div>
+        <div class="right-sie">
+          <img src="./images/photocover.png" alt="alpha-affiliates community" />
+        </div>
       </section>
-      <section class="main__vacancies vacancies">
+      <section id="vacancies" class="main__vacancies vacancies">
         <h2 class="vacancies__heading">Our vacancies</h2>
         <div class="vacancies__list list">
           <div class="list__item">
