feat: Add vacancies block

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha Affiliates</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
@@ -67,24 +68,99 @@
         <h2 class="vacancies__heading">Our vacancies</h2>
         <div class="vacancies__list list">
           <div class="list__item">
-            <span>Product/Web Analyst</span>
-            <img src="./images/arrow.svg" alt="arrow" />
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/product-web-analyst"
+              target="_blank"
+              >Product/Web Analyst</a
+            >
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
           </div>
           <div class="list__item">
-            <span>CMO</span>
-            <img src="./images/arrow.svg" alt="arrow" />
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/cmo"
+              target="_blank"
+              >CMO</a
+            >
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
           </div>
           <div class="list__item">
-            <span>Team Lead Affiliate</span>
-            <img src="./images/arrow.svg" alt="arrow" />
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/team-lead-affiliate"
+              target="_blank"
+              >Team Lead Affiliate</a
+            >
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
           </div>
           <div class="list__item">
-            <span>Affiliate Manager</span>
-            <img src="./images/arrow.svg" alt="arrow" />
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/affiliate-manager-1"
+              target="_blank"
+              >Affiliate Manager</a
+            >
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
           </div>
           <div class="list__item">
-            <span>General</span>
-            <img src="./images/arrow.svg" alt="arrow" />
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/general"
+              target="_blank"
+              >General</a
+            >
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
           </div>
         </div>
       </section>
@@ -240,7 +316,7 @@
               <h4>Support</h4>
               <div>
                 <div class="form__redline"></div>
-                <a href="mailto:partners@alpha-affiliates.com"
+                <a href="mailto:career@alpha-affiliates.com"
                   >partners@alpha-affiliates.com</a
                 >
               </div>
