feat: Add leader block

--- a/index.html
+++ b/index.html
@@ -176,16 +176,18 @@
         >
         <div class="leaders__statistic">
           <div class="leaders__statistic-block">
-            <span>15 000+</span>
-            <span>partners</span>
+            <div>
+              <span>15 000+</span>
+              <span>partners</span>
+            </div>
           </div>
           <div class="leaders__statistic-block">
-            <span>2 000 000+</span>
-            <span>players worldwide</span>
+            <div><span>2 000 000+</span> <span>players worldwide</span></div>
           </div>
           <div class="leaders__statistic-block">
-            <span>50 000 000€</span>
-            <span>paid to partners in 2022</span>
+            <div>
+              <span>50 000 000€</span> <span>paid to partners in 2022</span>
+            </div>
           </div>
         </div>
       </section>
