feat: Add relocation block

--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
           />
         </div>
       </section>
-      <h2 class="main__relocation-heading">RELOCATION</h2>
+      <img
+        class="main__relocation-heading"
+        src="./images/RELOCATION.svg"
+        alt="RELOCATION title"
+      />
       <section id="relocation" class="main__relocation relocation">
         <div class="relocation__benefits benefits">
           <h3 class="benefits__heading">
