feat: Add langing list  block

--- a/index.html
+++ b/index.html
@@ -291,7 +291,9 @@
         </div>
         <div class="relocation__offering">
           <span>Are you with us?</span>
-          <a href="#" class="relocation__jobs jobs-check">See all jobs</a>
+          <a href="#vacancies" class="relocation__jobs jobs-check"
+            >See all jobs</a
+          >
         </div>
       </section>
       <section id="form" class="main__form form">
