fix: Change cover

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </h3>
           <a href="#vacancies" class="cover__jobs jobs-check">See all jobs</a>
         </div>
-        <div class="right-sie">
+        <div class="right-side">
           <img src="./images/photocover.png" alt="alpha-affiliates community" />
         </div>
       </section>
