fix: Fix scroll and gaps

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <ul class="header__menu menu">
         <li class="menu__item">
           <span>01.</span>
-          <a href="#cover">Careers</a>
+          <a onclick="scrollToElem('cover')">Careers</a>
         </li>
         <li class="menu__item">
           <span>02.</span>
-          <a href="#leaders">About us</a>
+          <a onclick="scrollToElem('leaders')">About us</a>
         </li>
         <li class="menu__item">
           <span>03.</span>
-          <a href="#relocation">Relocations</a>
+          <a onclick="scrollToElem('relocation')">Relocations</a>
         </li>
         <li class="menu__item">
           <span>04.</span>
-          <a href="#form">Contact us</a>
+          <a onclick="scrollToElem('form')">Contact us</a>
         </li>
       </ul>
       <div class="header__social">
@@ -40,7 +40,7 @@
           target="_blank"
           href="https://www.instagram.com/alphaaffiliates.career?igsh=dTJrdnpwMmFzdXVp"
           class="header__social-instagram header__social-item"
-        ></a>
+        >
         <a
           target="_blank"
           href="https://www.linkedin.com/company/alpha-affiliates/"
@@ -48,6 +48,7 @@
         ></a>
       </div>
     </header>
+
     <main class="main">
       <section id="cover" class="main__cover cover">
         <div class="left-side">
@@ -366,5 +367,7 @@
         >Copyright © 2024 Alpha Affiliates. All rights reserved.</span
       >
     </footer>
+    <script src="./js/scroll.js">
+    </script>
   </body>
 </html>
