feat: Add form validation and new sent message

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alpha Affiliates</title>
+    <title>Alpha Affiliates Careers: Start Your Career Journey Now</title>
+    <meta
+      name="description"
+      content="Discover rewarding career opportunities at Alpha Affiliates. Browse our latest jobs and kick-start your career journey."
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="adaptive.css" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <div class="popup" id="popup">
-      Sent!
-      <img src="./images/close.svg" alt="Close icon" />
-    </div>
     <header class="header">
       <div class="header__logo">
         <img src="./images/logo-big1.svg" alt="Logo of Alpha Affiliates" />
@@ -59,11 +60,11 @@
       <section id="cover" class="main__cover cover">
         <div class="left-side">
           <h1 class="cover__heading">
-            Your journey to the big one begins <span>here</span>
+            Embark on your journey towards greatness right <span>here</span>
           </h1>
           <h3 class="cover__subheading">
-            Step into a culture where achieving more, being more, and securing a
-            brighter future are part of our day-to-day.
+            Step into a culture that values achievement, ambition, and securing
+            a brighter tomorrow!
           </h3>
           <a href="#vacancies" class="cover__jobs jobs-check">See all jobs</a>
         </div>
@@ -174,13 +175,12 @@
       <section id="leaders" class="main__leaders leaders">
         <h2 class="leaders__heading">Market leaders</h2>
         <span class="leaders__description"
-          >We are an international digital marketing company and one of the
-          leaders in the iGaming industry. We're not just keeping up with the
-          industry; we're setting the pace. Join us in shaping the future, as we
-          strive for continuous improvement and go head-to-head with industry
-          leaders. Ready to be a driving force in our success story? Let's make
-          strides together!</span
-        >
+          >As an international digital company, we lead the affiliate marketing
+          sector, setting the benchmark rather than simply following it. Join us
+          in shaping the future, where we're committed to continuous improvement
+          and going toe-to-toe with industry giants. <br /><br />Ready to drive
+          change? Let's make progress together!
+        </span>
         <div class="leaders__statistic">
           <div class="leaders__statistic-block">
             <div>
@@ -309,16 +309,18 @@
             <div class="form__line"></div>
             <input
               type="text"
+              id="name"
               name="name"
               class="form__name"
               placeholder="Full name"
               required
             />
           </div>
-          <div class="form__input">
+          <div class="form__input" id="emailbox">
             <div class="form__line"></div>
             <input
               type="text"
+              id="email"
               name="email"
               class="form__email"
               placeholder="Email Address"
@@ -329,14 +331,16 @@
             <div class="form__line form__line-message"></div>
             <textarea
               name="descr"
+              id="desrc"
               class="form__message"
               placeholder="Message"
               required
             ></textarea>
           </div>
-          <div class="form__input form__input-sendbox">
+          <div class="form__input form__input-sendbox" id="form__submit">
             <input
               type="submit"
+              id="submit"
               class="form__input-send"
               value="Send Message"
             />
@@ -350,7 +354,7 @@
               <div class="form__block-email">
                 <div class="form__redline"></div>
                 <a href="mailto:career@alpha-affiliates.com"
-                  >partners@alpha-affiliates.com</a
+                  >career@alpha-affiliates.com</a
                 >
               </div>
             </div>
