fix: Add to list-item link opening with js

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <section id="vacancies" class="main__vacancies vacancies">
         <h2 class="vacancies__heading">Our vacancies</h2>
         <div class="vacancies__list list">
-          <div class="list__item">
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/product-web-analyst', '_blank');"
+          >
             <a
               href="https://alphaffiliates.huntflow.io/vacancy/product-web-analyst"
               target="_blank"
@@ -94,7 +97,10 @@
               />
             </svg>
           </div>
-          <div class="list__item">
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/cmo', '_blank');"
+          >
             <a
               href="https://alphaffiliates.huntflow.io/vacancy/cmo"
               target="_blank"
@@ -113,7 +119,10 @@
               />
             </svg>
           </div>
-          <div class="list__item">
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/team-lead-affiliate', '_blank');"
+          >
             <a
               href="https://alphaffiliates.huntflow.io/vacancy/team-lead-affiliate"
               target="_blank"
@@ -132,7 +141,10 @@
               />
             </svg>
           </div>
-          <div class="list__item">
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/affiliate-manager-1', '_blank');"
+          >
             <a
               href="https://alphaffiliates.huntflow.io/vacancy/affiliate-manager-1"
               target="_blank"
@@ -151,7 +163,10 @@
               />
             </svg>
           </div>
-          <div class="list__item">
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/general', '_blank');"
+          >
             <a
               href="https://alphaffiliates.huntflow.io/vacancy/general"
               target="_blank"
