feat: Add adaptive to 320px

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
           </h3>
           <a href="#vacancies" class="cover__jobs jobs-check">See all jobs</a>
         </div>
-        <div class="right-side">
-          <img src="./images/photocover.png" alt="alpha-affiliates community" />
-        </div>
+        <div class="right-side"></div>
       </section>
       <section id="vacancies" class="main__vacancies vacancies">
         <h2 class="vacancies__heading">Our vacancies</h2>
